--- a/main.tex
+++ b/main.tex
@@ -107,7 +107,7 @@
     debt and retained earnings. The model introduces asymmetric information via monitoring costs included in the
     participation constraint of financial intermediaries. Additionally, a borrowing constraint that sets a fixed
     leverage ratio for firms represents another financial friction. The solution process starts with a Lagrangian
-    approach to formulate the Euler equations for dividends and capital, followed by a Bellman equation with a
+    approach to formulate the Euler equations for dividends, followed by a Bellman equation with a
     guess-and-verify method to derive a closed-form solution for the optimal paths of dividends and capital. An
     important finding is that monitoring costs lead to lower steady-state levels of capital and dividends. The thesis concludes
     with Monte Carlo simulations that introduce heterogeneity across firms and continuous sinusoidal productivity shocks.
@@ -123,7 +123,7 @@ Recessions are characterized by increased instances of bankruptcies and business
 Recession, the annual establishment exit rate in the US escalated from 11.8\% to 13.5\% from March 2008 to March 2009.
 This surge in firm exit rates during economic contractions has propelled the notion that
 recessions serve a 'cleansing' role in the economy: inefficient firms, becoming unprofitable, are phased out, thereby
-facilitating the redistribution of resources to more productive entities.
+facilitating the redistribution of resources to more productive entities. 
 
 This traditional perspective, highlighted in the work of \cite{CabHarm94}, presupposes that markets
 inherently favor the survival of the most productive firms. Nonetheless, this premise has been contested by numerous
@@ -157,7 +157,7 @@ demonstrates the significant impact of monitoring costs, which reduce both capit
 vulnerability of firms irrespective of their productivity. 
 
 Furthermore, eliminating debt and financial frictions enabled the retrieval of closed-form solutions for the initial
-maximization challenge. Remarkably, these results closely mirror those of the Ramsey-Cass-Koopmans model, indicating the
+maximization problem. Remarkably, these results closely mirror those of the Ramsey-Cass-Koopmans model, indicating the
 reliability of the theoretical model's outcomes. 
 
 Following the theoretical developments, this thesis employs Monte Carlo simulations to analyze the behavior
@@ -175,8 +175,8 @@ the selection process during recessions.
 
 The simulation's exercises suggest that recessions facilitate an enhancement in the economy's overall output by enabling
 the reallocation of resources towards more efficient firms, particularly in scenarios devoid of monitoring costs.
-However, the introduction of such costs tempers this efficiency gain, underscoring the role that financial
-frictions play in influencing the economy's adaptive capacity during downturns. This observed cleansing effect, albeit
+However, the introduction of such costs lowers this efficiency gain, underscoring the role that financial
+frictions play in influencing the economy's resilience during downturns. This observed cleansing effect, albeit
 modulated by the presence of financial frictions, aligned with the findings in \cite{OsePap17}. Despite the dampening
 influence of credit constraints, recessions retain an inherent capacity to purge the economy of 
 less efficient firms.
