--- a/main.tex
+++ b/main.tex
@@ -68,9 +68,10 @@
 \begin{titlepage}
     \centering
 
-    \Large Catholic University of Sacred Heart\\
-    \large Milan\\
-    \Large Master of Science in Economics\\
+    \Large UNIVERSITÀ CATTOLICA DEL SACRO CUORE\\
+    \Large Campus of Milan\\
+    \Large Faculty of Economics\\
+    \Large Master program in Economics\\
     \vspace{2cm}
     \includegraphics[width=0.4\textwidth]{logo.png}\\ 
     \vspace{2cm}
@@ -79,28 +80,29 @@
     \vspace{2cm}
 
     \begin{flushleft}
-    \large Supervisor: \\ Professor Domenico Delli Gatti
+    \large Supervisor \\
+    \large Professor Domenico Delli Gatti
     \end{flushleft}
     
     \vfill
     
     \hfill
-    \begin{minipage}{0.5\textwidth}
-        \raggedleft
-        \large Author:\\
+    \begin{minipage}{0.3\textwidth}
+        \raggedright
+        \large Dissertation by\\
         \large Riccardo Dal Cero\\
-        \large Student ID: 5112054
+        \large Id number: 5112054
     \end{minipage}
     
     \vspace{0.8cm}
 
-    \Large{Academic Year 2023/2024}
+    \Large{Academic Year 2022/2023}
     
 \end{titlepage}
 
 
 \begin{abstract}
-    This thesis develops a theoretical framework to explore how financial frictions affect the optimal trajectory for
+    This thesis develops a theoretical framework to explore how financial frictions affect firm's decision on the optimal trajectory for
     capital and dividends. Initially, the model excludes the possibility of debt financing for investment, akin to
     the Ramsey-Cass-Koopmans model, with dividends instead of consumption levels. By employing a Lagrangian method,
     the Euler equation for dividends is derived. In the next stage, firms are allowed to finance investments through
@@ -111,7 +113,7 @@
     guess-and-verify method to derive a closed-form solution for the optimal paths of dividends and capital. An
     important finding is that monitoring costs lead to lower steady-state levels of capital and dividends. The thesis concludes
     with Monte Carlo simulations that introduce heterogeneity across firms and continuous sinusoidal productivity shocks.
-    These simulations suggest that financial frictions reduce the cleansing effect, but it remains positively
+    These simulations suggest that financial frictions reduce the cleansing effect, but the latter remains positively
     significant, aligning with the findings of \cite{OsePap17}.
 \end{abstract}
 
