--- a/main.tex
+++ b/main.tex
@@ -681,7 +681,7 @@ Datasets that closely align with the theoretical CC and DD series have been comp
 lies on the dataset curated by \cite{DAvHalt90, DavHalt92}, who leverage the Longitudinal Research Database to construct
 quarterly series for U.S. manufacturing plants spanning the period 1972:2-1986:4. 
 
-In their empirical approach, \cite{DavHal94}utilize output to empirically determine demand, employing the growth
+In their empirical approach, \cite{DavHalt92}utilize output to empirically determine demand, employing the growth
 rate of the industrial production index as a proxy for output growth. Notably, in the foundational theoretical model,
 \(Q(r)\) is smoothed by price movement, with the elasticity of demand determining the extent of smoothing, assumed to be
 equal to 1. While the theoretical model maintains a constant dividend wage, the authors acknowledge that considering
